updated the title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fucking heart</title>
+    <title>heart</title>
     <link
 
       href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat&display=swap"
